fix the dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
-html {
+html,
+#root {
+  height: 100%;
   scroll-behavior: smooth;
 }
 
@@ -11,11 +13,16 @@ html {
 }
 
 body {
+  height: 100%;
   font-family: "Nunito", sans-serif;
 }
 
-.page-wrapper.darkModeOn {
+.page-wrapper {
+  min-height: 100vh;
   width: 100%;
+}
+
+.page-wrapper.darkModeOn {
   background-color: black;
 }
 
